@@ -59,6 +59,7 @@
  '(eshell-ask-to-save-history (quote always))
  '(eshell-cmpl-cycle-completions nil)
  '(eshell-prefer-to-shell t nil (eshell))
+ '(eshell-save-history-on-exit t)
  '(fill-column 80)
  '(flyspell-default-dictionary "francais")
  '(flyspell-issue-welcome-flag nil)
@@ -98,6 +99,7 @@
  '(pc-selection-mode t)
  '(pcomplete-autolist t)
  '(pcomplete-cycle-completions nil)
+ '(preview-default-option-list (quote ("displaymath" "floats" "graphics" "textmath" "footnotes")))
  '(prolog-system (quote swi))
  '(recentf-exclude (quote (":")))
  '(recentf-mode t nil (recentf))
